--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,6 @@ language: php
 
 php:
 
-  - 5.6
-  - 7.0
   - 7.1
   - 7.2
 
@@ -14,5 +12,5 @@ before_script:
 
 script:
   - vendor/bin/phpunit
-  - vendor/bin/phpc app --standard=PSR2
+  - vendor/bin/phpcs app --standard=PSR2
     
